SERVER-31481 skip cluster time validation for the __system user in mongos