src/mongo/s/commands/strategy.cpp
@@ -95,7 +95,6 @@ Status processCommandMetadata(OperationContext* opCtx, const BSONObj& cmdObj) {
         return logicalTimeMetadata.getStatus();
     }
 
-    auto authSession = AuthorizationSession::get(opCtx->getClient());
     auto logicalTimeValidator = LogicalTimeValidator::get(opCtx);
     const auto& signedTime = logicalTimeMetadata.getValue().getSignedTime();
 
@@ -104,7 +103,7 @@ Status processCommandMetadata(OperationContext* opCtx, const BSONObj& cmdObj) {
         return Status::OK();
     }
 
-    if (authSession->getAuthorizationManager().isAuthEnabled()) {
+    if (!LogicalTimeValidator::isAuthorizedToAdvanceClock(opCtx)) {
         auto advanceClockStatus = logicalTimeValidator->validate(opCtx, signedTime);
 
         if (!advanceClockStatus.isOK()) {
